# llm-wiki

./: .gitignore  README.md  pyproject.toml
docs/guides/: cookbook.md  getting-started.md  how-it-works.md
docs/plans/: 2026-04-09-team-memory-wiki-implementation.md
docs/releases/: v0.1.0.md
docs/specs/: 2026-04-09-team-memory-wiki-design.md
src/llm_wiki/: __init__.py  cli.py  config.py  filters.py  indexes.py  inference.py  ingest.py  init_workspace.py  lint.py  manifests.py  models.py  project_id.py  query.py  snapshot.py  wiki_writer.py
tests/: conftest.py
tests/fixtures/conflicting_project/: README.md
tests/fixtures/conflicting_project/docs/: status.md
tests/fixtures/noisy_next_steps_project/: CLAUDE.md  README.md
tests/fixtures/noisy_next_steps_project/docs/: plan.md
tests/fixtures/noisy_project/: .env  README.md
tests/fixtures/overview_priority_project/: CLAUDE.md  README.md
tests/fixtures/overview_priority_project/docs/: onboarding.md
tests/fixtures/sample_project/: README.md
tests/fixtures/sample_project/docs/: plan.md
tests/golden/: test_index_markdown.py  test_ingest_log.py  test_project_card.py
tests/integration/: test_cli_subprocess.py  test_ingest_cli.py  test_query_cli.py
tests/unit/: test_filters.py  test_indexes.py  test_inference.py  test_ingest.py  test_init_workspace.py  test_lint.py  test_manifests.py  test_project_id.py  test_query.py  test_snapshot.py
